Poniendo estilos css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="/assets/icon.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -16,9 +17,9 @@
     <header class=" ">
         <div class="header-content">
             <div class="header-image">
-                <img class="img-1" src="pexels-negative-space-34140.jpg" alt="">
+                <img class="img-1" src="assets/background.jpg" alt="">
 
-                <img class="img-2" src="./me.png" alt="">
+                <img class="img-2" src="assets/me.png" alt="">
             </div>
             <h1 class="h1">Daniel Hernandez Talla</h1>
             <p class="header__p">Soy ingeniro en softwere</p>
