Add function to nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav id="nav" class="nav nav__a-opacity">
         <!-- <div class=""> -->
-        <a class="nav__logo" href="#"><img class="nav__img" src="./meSmall2.png" alt="">
+        <a class="nav__logo" href="#"><img class="nav__img" src="./assets/icon.png" alt="">
             <span class="nav__span">DanyHT</span></a>
         <!-- </div> -->
         <div class="nav__as">
@@ -178,7 +178,7 @@
             <p class="footer__p">Sitio diseñado por @DanyHT</p>
         </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="app/app.js" type="module"></script>
 
 </body>
 
