Doing fast changes for send to MARCO

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img class="img-2" src="assets/me.png" alt="">
             </div>
             <h1 class="h1">Daniel Hernandez Talla</h1>
-            <p class="header__p">Soy ingeniro en softwere</p>
+            <p class="header__p">Soy ingeniero en software</p>
         </div>
     </header>
 
@@ -31,12 +31,18 @@
         <a class="nav__logo" href="#"><img class="nav__img" src="./assets/icon.png" alt="">
             <span class="nav__span">DanyHT</span></a>
         <div class="nav__div">
-            <a class="nav__a" href="#about"><i class="nav__i fas fa-user"></i>Acerca</a>
-            <a class="nav__a" href="#education"><i class="nav__i fas fa-file"></i>Education</a>
-            <a class="nav__a" href="#tecnologi"><i class="nav__i fas fa-file"></i>Tecnologias</a>
-            <a class="nav__a" href="#skills"><i class="nav__i fas fa-file"></i>Habilidades</a>
-            <a class="nav__a" href="#portfolio"><i class="nav__i fas fa-address-book"></i>Portafolio</a>
-            <a class="nav__a" href="#contact"><i class="nav__i fas fa-home"></i>Contacto</a>
+            <a class="nav__a" href="#about">
+                <!--<i class="nav__i fas fa-user"></i>-->Acerca</a>
+            <a class="nav__a" href="#education">
+                <!--<i class="nav__i fas fa-file"></i>-->Educación</a>
+            <a class="nav__a" href="#tecnologi">
+                <!--<i class="nav__i fas fa-file"></i>-->Tecnologías</a>
+            <a class="nav__a" href="#skills">
+                <!--<i class="nav__i fas fa-file"></i>-->Habilidades</a>
+            <a class="nav__a" href="#portfolio">
+                <!--<i class="nav__i fas fa-address-book"></i>-->Portafolio</a>
+            <a class="nav__a" href="#contact">
+                <!--<i class="nav__i fas fa-home"></i>-->Contacto</a>
         </div>
     </nav>
 
@@ -51,58 +57,59 @@
             <img class="section__img" src="./meSmall2.png" alt="">
             <ul class="section__ul">
                 <li class="section__li">Soy Daniel Hernandez Talla <i>ingeniero de software</i></li>
-                <li class="section__li">Naci en Navojoa Sonora Mexico</li>
-                <li class="section__li">Vivo en Navojoa Sonora Mexico</li>
+                <li class="section__li">Nací en Navojoa Sonora México</li>
+                <li class="section__li">Vivo en Navojoa Sonora México</li>
                 <li class="section__li small">daniel.hernandez.talla@gmail.com</li>
                 <li class="section__li">64-21-49-75-17</li>
             </ul>
-            <p class="section__p">Tengo experiencia con la <i>programación</i> desde el año 2016. Mis primeros años en
-                el mundo del
-                desarrollo fueron en la preparatoría, a un que pronto entre a la universidad y hay, aparte de estar en
-                la
-                carrera de <i>ingeniero de Software</i> tambien estaba en un taller en el cual iniciamos con pruebas y
-                cursos, para despues hacer proyectos que la misma escuela requieriera.</p>
-            <p class="section__p">El ser <i>programador</i> y poder solucionar problematicas en codigo es una de mis
+            <p class="section__p">Estudiante de la ingeniería de software en ITSON universidad, con el sexto semestre
+                culminado, teniendo habilidades avanzadas para el desarrollo de aplicaciones de escritorio, aplicaciones
+                web y habilidades básicas en el desarrollo de base de datos.</p>
+            <!-- <p class="section__p">El ser <i>programador</i> y poder solucionar problemáticas en código es una de mis
                 mayores satisfacciones
-                y no lo cambiaria por nada.</p>
+                y no lo cambiaria por nada.</p> -->
         </section>
 
         <!-- Section of my education -->
         <section id="education" class="section education">
-            <h2 class="section__h2">Educacion</h2>
+            <h2 class="section__h2">Educación</h2>
             <ul class="section__ul">
                 <li class="section__li">2016 - 2019 <br>
-                    <p>Ingeniero de software: Curse el bachillerato, obteniendo el titulo de <i>ingeniero de
-                            software</i></p>
+                    <p class="section__p">• Graduado de la especialidad de programación, adquiriendo habilidades básicas
+                        en el desarrollo de software con JAVA y SQL</p>
+                    <p class="section__p">• Graduado con el mejor promedio de la generación</p>
                 </li>
-                <li class="section__li">2019 <br>
-                    <p>Ingrese a la universidad en la carrera de <i>ingeniero de software</i></p>
-                </li>
-                <li class="section__li">2019 <br>
-                    <p>Asistí a un taller de <i>software</i> en el cual desarrollamos la logica de la programación</p>
+                <li class="section__li">2019 - 2022<br>
+                    <p class="section__p">• Forme parte de un taller de consultorías (ACTI) (2019-2020)</p>
+                    <p class="section__p">• Adquirí habilidades avanzadas en el desarrollo de aplicaciones de
+                        escritorio,
+                        así como de aplicaciones para la web </p>
                 </li>
             </ul>
         </section>
 
         <!-- Section the technologies that I know -->
         <section id="tecnologi" class="section tecnologi">
-            <h2 class="section__h2">Tecnologias</h2>
+            <h2 class="section__h2">Tecnologías</h2>
             <ul class="section__ul">
                 <li class="section__li">HTML</li>
                 <li class="section__li">CSS</li>
                 <li class="section__li">JAVASCRIP</li>
+                <li class="section__li">Node JS</li>
                 <li class="section__li">C#</li>
                 <li class="section__li">JAVA</li>
                 <li class="section__li">SQL</li>
+                <li class="section__li">MySQL</li>
             </ul>
         </section>
 
         <!-- Section of my skills -->
         <section id="skills" class="section skills">
-            <h2 class="section__h2">Habilidas</h2>
+            <h2 class="section__h2">Habilidades</h2>
             <ul class="section__ul">
-                <li class="section__li">Programación Web Frontend</li>
-                <li class="section__li">Trabajo en equipo</li>
+                <li class="section__li">Desarrollo web con HTML, CSS y JavaScript </li>
+                <li class="section__li">Desarrollo de aplicaciones REST con Node JS </li>
+                <li class="section__li">Capacidad de solución de problemas y liderazgo de equipos </li>
                 <li class="section__li">Autodidacta</li>
                 <li class="section__li">Adaptabilidad</li>
             </ul>
@@ -111,16 +118,72 @@
         <!-- Section of my portfolio -->
         <section id="portfolio" class="section portfolio">
             <h2 class="section__h2">Portafolio</h2>
-            <ul class="section__ul">
-                <li class="section__li portfolio__li">
-                    <a class="portfolio__a" href="https://github.com/DanielHernandezTalla/CmdProject" target="_blank"><i
-                            class="fas fa-laptop-code"></i></a>
-                    <p class="portfolio__p"><b>CMD Proyect:</b> Es un proyecto que nos ayuda en la administracion de
-                        archivos,
-                        similar a la CMD de
-                        windows.</p>
-                </li>
-            </ul>
+            <section class="section-slide">
+                <a href="https://github.com/DanielHernandezTalla/CV" target="_blank" class="card">
+                    <div class="card-barra">
+                        <div class="barra__circle"></div>
+                        <h4 class="barra__title">My-CV</h4>
+                    </div>
+                    <img class="card__img" src="assets/CV.png" alt="Image of project">
+                    <div class="card-content">
+                        <h5 class="card__h5">Acerca</h5>
+                        <p class="card__p">
+                            My-CV es un proyecto donde muestro mis proyectos de vida, así como un pequeño resumen la mi
+                            vida
+                            misma.
+                        </p>
+                        <h5 class="card__h5">Tecnologías</h5>
+                        <ul class="card__list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JAVASCRIPT</li>
+                        </ul>
+                    </div>
+                </a>
+                <a href="https://github.com/DanielHernandezTalla/AntojitosMexicanos" class="card" target="_blank">
+                    <div class="card-barra">
+                        <div class="barra__circle"></div>
+                        <h4 class="barra__title">Antojitos Mexicanos Doña Pancita</h4>
+                    </div>
+                    <img class="card__img" src="assets/antojito.png" alt="Image of project">
+                    <div class="card-content">
+                        <h5 class="card__h5">Acerca</h5>
+                        <p class="card__p">
+                            Proyecto desarrollado para una microempresa de comidas mexicanas
+                        </p>
+                        <h5 class="card__h5">Tecnologías</h5>
+                        <ul class="card__list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JAVASCRIPT</li>
+                            <li>Node JS <small>(Backend)</small></li>
+                            <li>MySQL <small>(Base de Datos)</small></li>
+                        </ul>
+                    </div>
+                </a>
+                <a href="https://github.com/DanielHernandezTalla/FirstClassNavojoa" class="card" target="_blank">
+                    <div class="card-barra">
+                        <div class="barra__circle"></div>
+                        <h4 class="barra__title">Sistema Fisrt Class</h4>
+                    </div>
+                    <img class="card__img" src="assets/SFC.png" alt="Image of project">
+                    <div class="card-content">
+                        <h5 class="card__h5">Acerca</h5>
+                        <p class="card__p">
+                            Proyecto para la administración de eventos e impresión de documentos para la lista de
+                            empleados
+                        </p>
+                        <h5 class="card__h5">Tecnologías</h5>
+                        <ul class="card__list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JAVASCRIPT</li>
+                            <li>Node JS <small>(Backend)</small></li>
+                            <li>MySQL <small>(Base de Datos)</small></li>
+                        </ul>
+                    </div>
+                </a>
+            </section>
         </section>
 
         <!-- Section of contact -->
@@ -131,7 +194,7 @@
                 <div class="contact-data__div">
                     <i class="contact-data__i fas fa-home"></i>
                     <span class="contact-data__span">Ubicación</span>
-                    <small class="contact-data__small">Navojoa, Sonora, Mexico</small>
+                    <small class="contact-data__small">Navojoa, Sonora, México</small>
                 </div>
                 <div class="contact-data__div">
                     <i class="contact-data__i fas fa-envelope"></i>
@@ -151,14 +214,14 @@
                             target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="contact-data__a" href="https://github.com/danielhernandeztalla" target="_blank"><i
                                 class="fab fa-github"></i></a>
-                        <a class="contact-data__a" href="https://www.instagram.com/danielhernandeztalla/"
-                            target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a class="contact-data__a" href="" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a class="contact-data__a" href="https://www.instagram.com/danyhdzt/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+                        <!-- <a class="contact-data__a" href="" target="_blank"><i class="fab fa-whatsapp"></i></a> -->
                     </div>
                 </div>
             </section>
             <!-- Form of contact -->
-            <form id="contact-mail" class="contact-mail">
+            <!-- <form id="contact-mail" class="contact-mail">
                 <div class="contact-mail__div">
                     <input class="contact-mail__input" name="name" type="text" placeholder="Ingresa tu nombre"
                         title="Escribe tu nombre" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
@@ -172,12 +235,13 @@
                     <textarea class="contact-mail__textarea" name="message" id="" cols="30" rows="10"
                         placeholder="Escribe un message" title="Escribe un mensaje" data-pattern="^.{1,255}$"
                         required></textarea>
-                    <!-- <span class="contact-mail__error">Error:</span> -->
-                    <!-- Span that helps in the errors -->
-                </div>
-                <input class="contact-mail__submit" type="submit" name="button">
-            </form>
+                    </div>
+                    <input class="contact-mail__submit" type="submit" name="button">
+                </form> -->
+            <!-- <span class="contact-mail__error">Error:</span> -->
+            <!-- Span that helps in the errors -->
         </section>
+
     </main>
 
     <footer class="  footer">
