change: change images and optimized

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="icon" type="image/png" href="/assets/cuadrado.png" />
+    <link rel="icon" type="ico" href="/assets/icon.ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -18,8 +18,8 @@
     <header class=" ">
         <div class="header-content">
             <div class="header-image">
-                <img class="img-1" src="assets/background.jpg" alt="">
-                <img class="img-2" src="assets/me.png" alt="">
+                <img class="img-1" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562389/CV/background_kshm24.jpg" alt="">
+                <img class="img-2" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562390/CV/me_jflewq.png" alt="">
             </div>
             <h1 class="h1">Daniel Hernandez Talla</h1>
             <p class="header__p">Soy ingeniero en software</p>
@@ -28,14 +28,14 @@
 
     <!-- Nav of CV -->
     <nav id="nav" class="nav nav__a-opacity">
-        <a class="nav__logo" href="#"><img class="nav__img" src="./assets/icon.png" alt="">
+        <a class="nav__logo" href="#"><img class="nav__img" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562388/CV/icon_bnd0lt.png" alt="">
             <span class="nav__span">DanyHT</span></a>
         <div class="nav__div">
             <a class="nav__a" href="#about">
                 <!--<i class="nav__i fas fa-user"></i>-->Acerca</a>
             <a class="nav__a" href="#education">
                 <!--<i class="nav__i fas fa-file"></i>-->Educación</a>
-            <a class="nav__a" href="#tecnologi">
+            <a class="nav__a" href="#tecnology">
                 <!--<i class="nav__i fas fa-file"></i>-->Tecnologías</a>
             <a class="nav__a" href="#skills">
                 <!--<i class="nav__i fas fa-file"></i>-->Habilidades</a>
@@ -54,7 +54,7 @@
         <!-- Section about me -->
         <section id="about" class="section about">
             <h2 class="section__h2">Acerca</h2>
-            <img class="section__img" src="./meSmall2.png" alt="">
+            <!-- <img class="section__img" src="./assets/.png" alt=""> -->
             <ul class="section__ul">
                 <li class="section__li">Soy Daniel Hernandez Talla <i>ingeniero de software</i></li>
                 <li class="section__li">Nací en Navojoa Sonora México</li>
@@ -89,7 +89,7 @@
         </section>
 
         <!-- Section the technologies that I know -->
-        <section id="tecnologi" class="section tecnologi">
+        <section id="tecnology" class="section tecnologi">
             <h2 class="section__h2">Tecnologías</h2>
             <ul class="section__ul">
                 <li class="section__li">HTML</li>
@@ -122,17 +122,17 @@
                 <a href="https://github.com/DanielHernandezTalla/CV" target="_blank" class="card">
                     <div class="card-barra">
                         <div class="barra__circle"></div>
-                        <h4 class="barra__title">My-CV</h4>
+                        <h3 class="barra__title">My-CV</h3>
                     </div>
-                    <img class="card__img" src="assets/CV.png" alt="Image of project">
+                    <img class="card__img" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562389/CV/P_CV_kz7oc2.jpg" alt="Image of project">
                     <div class="card-content">
-                        <h5 class="card__h5">Acerca</h5>
+                        <h4 class="card__h5">Acerca</h4>
                         <p class="card__p">
                             My-CV es un proyecto donde muestro mis proyectos de vida, así como un pequeño resumen la mi
                             vida
                             misma.
                         </p>
-                        <h5 class="card__h5">Tecnologías</h5>
+                        <h4 class="card__h5">Tecnologías</h4>
                         <ul class="card__list">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -143,15 +143,15 @@
                 <a href="https://github.com/DanielHernandezTalla/AntojitosMexicanos" class="card" target="_blank">
                     <div class="card-barra">
                         <div class="barra__circle"></div>
-                        <h4 class="barra__title">Antojitos Mexicanos Doña Pancita</h4>
+                        <h3 class="barra__title">Antojitos Mexicanos Doña Pancita</h3>
                     </div>
-                    <img class="card__img" src="assets/antojito.png" alt="Image of project">
+                    <img class="card__img" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562389/CV/P_Antojito_qcyd7g.jpg" alt="Image of project">
                     <div class="card-content">
-                        <h5 class="card__h5">Acerca</h5>
+                        <h4 class="card__h5">Acerca</h4>
                         <p class="card__p">
                             Proyecto desarrollado para una microempresa de comidas mexicanas
                         </p>
-                        <h5 class="card__h5">Tecnologías</h5>
+                        <h4 class="card__h5">Tecnologías</h4>
                         <ul class="card__list">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -164,16 +164,16 @@
                 <a href="https://github.com/DanielHernandezTalla/FirstClassNavojoa" class="card" target="_blank">
                     <div class="card-barra">
                         <div class="barra__circle"></div>
-                        <h4 class="barra__title">Sistema Fisrt Class</h4>
+                        <h3 class="barra__title">Sistema Fisrt Class</h3>
                     </div>
-                    <img class="card__img" src="assets/SFC.png" alt="Image of project">
+                    <img class="card__img" src="https://res.cloudinary.com/danielhdz/image/upload/v1659562388/CV/P_SFC_gawptv.jpg" alt="Image of project">
                     <div class="card-content">
-                        <h5 class="card__h5">Acerca</h5>
+                        <h4 class="card__h5">Acerca</h4>
                         <p class="card__p">
                             Proyecto para la administración de eventos e impresión de documentos para la lista de
                             empleados
                         </p>
-                        <h5 class="card__h5">Tecnologías</h5>
+                        <h4 class="card__h5">Tecnologías</h4>
                         <ul class="card__list">
                             <li>HTML</li>
                             <li>CSS</li>
