--- a/SistemaFirstClass.html
+++ b/SistemaFirstClass.html
@@ -26,7 +26,7 @@
             <a class="project-link" href="#"><i class="fas fa-code"></i></a>
         </nav>
         
-        <a href="/#portfolio" class="project-button-close"><i class="fas fa-times"></i></a>
+        <a href="index.html#portfolio" class="project-button-close"><i class="fas fa-times"></i></a>
 
     </header>
 
@@ -74,6 +74,6 @@
             <p class="footer__p">Sitio diseñado por @DanyHT</p>
         </div>
     </footer>
-    
+
 </body>
 </html>
