add: add first desing on project page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- Section of my portfolio -->
         <section id="portfolio" class="section portfolio" data-scroll-spy>
             <h2 class="section__h2">Portafolio</h2>
-            <section class="section-slide">
+            <section class="section-galery">
 
                 <a href="https://github.com/DanielHernandezTalla/CV" target="_blank" class="card">
                     <div class="card-barra">
