change: change github url

--- a/SistemaFirstClass.html
+++ b/SistemaFirstClass.html
@@ -133,7 +133,7 @@
 
             <h3 class="section__h3">Code</h3>
             <p class="section__p">
-                <a href="https://github.com/DanielHernandezTalla/FirstClassNavojoa" target="_blank">https://github.com/DanielHernandezTalla/FirstClassNavojoa</a>
+                <a href="https://github.com/DanielHernandezTalla/FirstClassNavojoa" target="_blank">GitHub</a>
             </p>
             
         </section>
