--- a/base.html
+++ b/base.html
@@ -114,7 +114,7 @@
             <!-- TODO: Add repository -->
             <h3 class="section__h3">Code</h3>
             <p class="section__p">
-                <a href="https://github.com/DanielHernandezTalla" target="_blank">https://github.com/DanielHernandezTalla</a>
+                <a href="https://github.com/DanielHernandezTalla" target="_blank">GitHub</a>
             </p>
             
         </section>
